--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,21 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fbfffe;
+  --foreground: #001514;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: 'Inter', Helvetica, sans-serif;
+  --font-mono: 'IBM Plex Mono', Courier;
+  --color-whiteish: #fbfffe;
+  --color-blackish: #001514;
+  --color-greyish: #a6a0a4;
+  --color-buffalo: #2378a9;
+  --color-newyork: #d63535;
 }
 
 @media (prefers-color-scheme: dark) {
